Filter FIXED: removed array, removed method templatesToSet()